<resources>
    <string name="app_name">VKRFoodApplication</string>
    <string name="menu_text">Меню</string>
    <string name="button_salads_text">Салаты</string>
    <string name="button_soups_text">Супы</string>
    <string name="button_hot_dishes_text">Горячие блюда</string>
    <string name="button_second_dish_text">Гарниры</string>
    <string name="button_drinks">Напитки</string>
    <string name="button_desserts_text">Десерты</string>
    <string name="favorite_text">Избранное</string>
    <string name="basket_text">Корзина</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">072aeYfQ2kATjPG0WfRXzm2l5zNFzI1AQhDjOHXg</string>
    <string name="back4app_client_key">s27xoxTm2eSFQWGN8wGmRxs1RtNuLgtwY91oLkcX</string>
</resources>