<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/menu_text"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <Button
                android:id="@+id/salads_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/button_salads_text"
                android:textColor="@color/brown_black"
                android:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/soups_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/button_soups_text"
                android:textColor="@color/brown_black"
                android:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/hot_dishes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/button_hot_dishes_text"
                android:textColor="@color/brown_black"
                android:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/second_dishes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/button_second_dish_text"
                android:textColor="@color/brown_black"
                android:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/drinks_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/button_drinks"
                android:textColor="@color/brown_black"
                android:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/desserts_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/button_desserts_text"
                android:textColor="@color/brown_black"
                android:backgroundTint="@color/purple_200" />
        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/food_big_description_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/scroll_menu_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" >

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_menu_fragment"
        android:layout_width="match_parent"
        android:layout_height="540dp"

        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_big_description_container" >
    <LinearLayout
        android:id="@+id/description_food_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

   <!-- <FrameLayout
        android:id="@+id/description_food_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu"


            app:layout_constraintBottom_toTopOf="@id/text_menu_button"
            app:layout_constraintEnd_toStartOf="@id/button_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_menu"
            app:layout_constraintStart_toStartOf="@id/button_menu"
            app:layout_constraintTop_toBottomOf="@id/button_menu" />


        <Button
            android:id="@+id/button_favorite"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/favorite"

            app:layout_constraintBottom_toTopOf="@id/text_favorite_button"
            app:layout_constraintEnd_toStartOf="@id/button_basket"
            app:layout_constraintStart_toEndOf="@id/button_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_favorite"
            app:layout_constraintStart_toStartOf="@id/button_favorite"
            app:layout_constraintTop_toBottomOf="@id/button_favorite" />

        <Button
            android:id="@+id/button_basket"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/basket"

            app:layout_constraintBottom_toTopOf="@id/text_basket_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_favorite"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_basket_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_basket"
            app:layout_constraintStart_toStartOf="@id/button_basket"
            app:layout_constraintTop_toBottomOf="@id/button_basket" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>