<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:text="Корзина"
        android:textSize="35sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_card_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/clear"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_finish_order"
        android:layout_marginTop="25dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_text" >

        <LinearLayout
            android:id="@+id/card_food_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </androidx.core.widget.NestedScrollView>



    <TextView
        android:id="@+id/finish_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="150 руб"

        app:layout_constraintBottom_toTopOf="@+id/make_order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/make_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Оформить заказ"

        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu"

            app:layout_constraintBottom_toTopOf="@id/text_menu_button"
            app:layout_constraintEnd_toStartOf="@id/button_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_menu"
            app:layout_constraintStart_toStartOf="@id/button_menu"
            app:layout_constraintTop_toBottomOf="@id/button_menu" />


        <Button
            android:id="@+id/button_favorite"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/favorite"


            app:layout_constraintBottom_toTopOf="@id/text_favorite_button"
            app:layout_constraintEnd_toStartOf="@id/button_basket"
            app:layout_constraintStart_toEndOf="@id/button_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_favorite"
            app:layout_constraintStart_toStartOf="@id/button_favorite"
            app:layout_constraintTop_toBottomOf="@id/button_favorite" />

        <Button
            android:id="@+id/button_basket"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/basket"

            app:layout_constraintBottom_toTopOf="@id/text_basket_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_favorite"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_basket_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_basket"
            app:layout_constraintStart_toStartOf="@id/button_basket"
            app:layout_constraintTop_toBottomOf="@id/button_basket" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>